--- a/src/Eticket.Application/Eticket.Application.csproj
+++ b/src/Eticket.Application/Eticket.Application.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CartaoRespostaAppService.cs" />
     <Compile Include="CEPBrasil\ConsultaCepAppService.cs" />
     <Compile Include="ClienteDeliveryAppService.cs" />
+    <Compile Include="ConfiguracaoSistemaAppService.cs" />
     <Compile Include="Conversores\EnumBooleanConverter.cs" />
     <Compile Include="Conversores\EnumParaBool.cs" />
     <Compile Include="Conversores\EnumParaInteger.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Interface\ICartaoRequisicaoAppService.cs" />
     <Compile Include="Interface\ICartaoRespostaAppService.cs" />
     <Compile Include="Interface\IClienteDeliveryAppService.cs" />
+    <Compile Include="Interface\IConfiguracaoSistemaAppService.cs" />
     <Compile Include="Interface\IDeliveryAppService.cs" />
     <Compile Include="Interface\IEmpresaAppService.cs" />
     <Compile Include="Interface\IEntregadorAppService.cs" />
@@ -87,6 +89,7 @@
     <Compile Include="Interface\IUsuarioAppService.cs" />
     <Compile Include="Interface\IVendaAppService.cs" />
     <Compile Include="Interface\IVendaMeioMeioAppService.cs" />
+    <Compile Include="Interface\IVendaPendenteAppService.cs" />
     <Compile Include="Interface\IVendedorAppService.cs" />
     <Compile Include="NfceServicoAppService.cs" />
     <Compile Include="ProdutoComplementoAppService.cs" />
@@ -105,6 +108,7 @@
     <Compile Include="ProdutoGrupoAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendaComplementoAppService.cs" />
+    <Compile Include="VendaPendenteAppService.cs" />
     <Compile Include="VendedorAppService.cs" />
     <Compile Include="ViewModels\CaixaFechamentoViewModel.cs" />
     <Compile Include="ViewModels\CaixaHistoricoViewModel.cs" />
@@ -118,6 +122,7 @@
     <Compile Include="ViewModels\ClienteDeliveryViewModel.cs" />
     <Compile Include="ViewModels\ClienteFichaViewModel.cs" />
     <Compile Include="ViewModels\ConfiguracaoInicialViewModel.cs" />
+    <Compile Include="ViewModels\ConfiguracaoSistemaViewModel.cs" />
     <Compile Include="ViewModels\ConsultaCepViewModel.cs" />
     <Compile Include="ViewModels\DeliveryViewModel.cs" />
     <Compile Include="ViewModels\DescontoViewResult.cs" />
