--- a/src/Zip.EticketSub/App.config
+++ b/src/Zip.EticketSub/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Zip.EticketSub.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -47,8 +47,7 @@
   </runtime>
   <applicationSettings>
     <Zip.EticketSub.Properties.Settings>
-      <setting name="Zip_EticketSub_br_com_ddns_validacaosolucoesvip_CHK"
-        serializeAs="String">
+      <setting name="Zip_EticketSub_br_com_ddns_validacaosolucoesvip_CHK" serializeAs="String">
         <value>http://validacaosolucoesvip.ddns.com.br:8090/chk/CHK.asmx</value>
       </setting>
     </Zip.EticketSub.Properties.Settings>
