--- a/src/Zip.Pdv.Form/App.config
+++ b/src/Zip.Pdv.Form/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=.; Initial Catalog=espetaculo;user id=sa;password=sql@asa;" providerName="System.Data.SqlClient" />
+    <add name="MyContext" connectionString="Data Source=192.168.1.37; Initial Catalog=PDV;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -10,7 +10,10 @@
     <add key="Pdv" value="1" />
     <add key="PdvId" value="101" />
     <add key="Loja" value="1" />
-    <add key="EmissorFiscal" value="2" />
+    <!--0-SEM / 1-ECF / 2-SAT / 3-NFCe -->
+    <add key="EmissorFiscal" value="3" />
+    <!--0 = Sem frete 1 = Com frete-->
+    <add key="Frete" value="1" />
 
     <add key="SOFTWAREHOUSECNPJ" value="16716114000172" />
     <add key="SOFTWAREHOUSECHAVEATICACAO" value="gertec1234" />
