--- a/src/Zip.Pdv.Form/App.config
+++ b/src/Zip.Pdv.Form/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=192.168.1.37; Initial Catalog=PDV;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
+    <add name="MyContext" connectionString="Data Source=192.168.1.37; Initial Catalog=expressa;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
