--- a/src/Zip.Sat/Zip.Sat.csproj
+++ b/src/Zip.Sat/Zip.Sat.csproj
@@ -145,5 +145,8 @@
   <ItemGroup>
     <None Include="Resources\close_black_32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
