--- a/src/Zip.Pdv.Form/App.config
+++ b/src/Zip.Pdv.Form/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=192.168.1.37; Initial Catalog=fazendinha;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
+    <add name="MyContext" connectionString="Data Source=26.239.31.94; Initial Catalog=fazendinha;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -11,18 +11,19 @@
     <add key="PdvId" value="1" />
     <add key="PdvTef" value="001" />
     <add key="Loja" value="1" />
+    <add key="RestauranteId" value="65" />
     <!--0-SEM / 1-ECF / 2-SAT / 3-NFCe -->
     <add key="EmissorFiscal" value="0" />
     <!--0 = Sem frete 1 = Com frete-->
     <add key="Frete" value="0" />
     <!--0 = PDV 1 = Totem-->
+    <add key="TipoPdv" value="0" />
     <add key="MensagemTotem" value="Olá, seja bem vindo ao autoatendimento da Fazendinha!
 	  O que deseja fazer?" />
     <add key="TotemHabPagamento" value="1" />
     <add key="TotemHabPedido" value="1" />
     <add key="TotemHabFicha" value="1" />
     <add key="TotemHabPreco" value="1" />
-    <add key="TipoPdv" value="1" />
     <add key="CodigoLojaTef" value="1456" />
     <add key="SOFTWAREHOUSECNPJ" value="32759021000181" />
     <add key="SOFTWAREHOUSECHAVEATICACAO" value="controlid1234" />
