--- a/src/Zip.EticketSub/Zip.EticketSub.csproj
+++ b/src/Zip.EticketSub/Zip.EticketSub.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <ApplicationIcon>LOGO-CLOUD.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.50.5.0, Culture=neutral, processorArchitecture=MSIL">
@@ -249,6 +249,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
+    <Content Include="LOGO-CLOUD.ico" />
     <None Include="Resources\map_32.png" />
     <None Include="Resources\Find Search.png" />
   </ItemGroup>
