--- a/src/Zip.Pdv.Form/App.config
+++ b/src/Zip.Pdv.Form/App.config
@@ -1,25 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <!-- Conexão com o banco de dados -->
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=26.239.31.94; Initial Catalog=fazendinha;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
+    <add name="MyContext" connectionString="Data Source=192.168.1.37; Initial Catalog=sambowlrbs;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
     <add key="Pdv" value="1" />
+    <!-- Nome da Estação no insert da venda_1 / 0 = Nome_da_Estação / 1 = Zimmer  -->
+    <add key="EstacaoFicha" value="1" />
     <add key="PdvId" value="1" />
     <add key="PdvTef" value="001" />
     <add key="Loja" value="1" />
+    <!-- Cartão Consumo (GiftCard) -->
     <add key="RestauranteId" value="65" />
-    <!--0-SEM / 1-ECF / 2-SAT / 3-NFCe -->
+    <!-- 0-SEM / 1-ECF / 2-SAT / 3-NFCe -->
     <add key="EmissorFiscal" value="0" />
-    <!--0 = Sem frete 1 = Com frete-->
+    <!-- 0 = Sem frete / 1 = Com frete -->
     <add key="Frete" value="0" />
-    <!--0 = PDV 1 = Totem-->
+    <!-- 0 = PDV / 1 = Totem -->
     <add key="TipoPdv" value="0" />
-    <add key="MensagemTotem" value="Olá, seja bem vindo ao autoatendimento da Fazendinha!
-	  O que deseja fazer?" />
+    <!-- Mensagem de texto no Topo -->
+    <add key="MensagemTotem" value="" />
     <add key="TotemHabPagamento" value="1" />
     <add key="TotemHabPedido" value="1" />
     <add key="TotemHabFicha" value="1" />
@@ -29,10 +33,10 @@
     <add key="SOFTWAREHOUSECHAVEATICACAO" value="controlid1234" />
     <add key="CAIXA" value="2" />
     <add key="HabilitaTef" value="1" />
-    <add key="MODELOFISCAL" value="0" />
     <!-- 1-ECF / 2-SAT / 3-NFCe -->
+    <add key="MODELOFISCAL" value="0" />
+    <!-- Bematech / ControliD / Dimep / Elgin / Emulador / Gertec / Kryptus / Sweda / Tanca / Urano -->
     <add key="SATMARCA" value="ControliD" />
-    <!-- Dimep / Elgin / Tanca / Kryptus / Bematech / Urano / Sweda / Gertec /Emulador -->
     <add key="SATSERVIDOR" value="192.168.0.2" />
     <add key="PORTASERVIDOR" value="3103" />
     <add key="SATPORTA" value="3" />
@@ -41,6 +45,7 @@
     <add key="SATTEXTORODAPE" value="ZIP Software" />
     <add key="SALVARARQUIVOS" value="C:\Sistema" />
     <add key="NUMEROLINHASENTRECUPOM" value="9" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -54,4 +59,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
