--- a/src/Zip.Pdv.Form/Zip.Pdv.csproj
+++ b/src/Zip.Pdv.Form/Zip.Pdv.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,7 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>LOGO_Z.ico</ApplicationIcon>
+    <ApplicationIcon>LOGO-CLOUD.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bunifu_UI_v1.52">
@@ -60,6 +75,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -813,6 +829,10 @@
       <Project>{32dfa282-26f9-441b-913d-43e88e00b025}</Project>
       <Name>Eticket.Infra.CrossCutting.IoC</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Eticket.Infra.Data\Eticket.Infra.Data.csproj">
+      <Project>{5da70fa7-1cb2-49cd-9316-fa890db25731}</Project>
+      <Name>Eticket.Infra.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Zip.Sat\Zip.Sat.csproj">
       <Project>{1b5e04f1-8557-4c1e-89af-bc7d35d43266}</Project>
       <Name>Zip.Sat</Name>
@@ -992,9 +1012,21 @@
   <ItemGroup>
     <None Include="Resources\send_32.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="LOGO_Z.ico" />
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 e x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LOGO-CLOUD.ico" />
+    <None Include="LOGO_Z.ico_backup" />
     <None Include="Resources\logofazendinha.png" />
     <None Include="Resources\fundo.jpg" />
     <None Include="Resources\logofazendinha2.png" />
@@ -1007,8 +1039,10 @@
     <None Include="Resources\Fundo1.jpg" />
     <None Include="Resources\FundoFazendinha.jpg" />
     <None Include="Resources\FundoBotao.png" />
+    <None Include="Resources\img_pagamento.png" />
+    <None Include="Resources\img_pedido.png" />
     <Content Include="Zip.TefDial.dll" />
-    <Content Include="ZipPdv.exe" />
+    <None Include="ZipPdv.exe_backup" />
     <None Include="Resources\filter_381.png" />
     <None Include="Resources\FundoCinza.png" />
     <None Include="Resources\fundobtnsalvar.png" />
