--- a/src/Zip.Pdv.Form/App.config
+++ b/src/Zip.Pdv.Form/App.config
@@ -2,22 +2,22 @@
 <configuration>
   <!-- Conexão com o banco de dados -->
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=192.168.1.37; Initial Catalog=sambowlrbs;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
+    <add name="MyContext" connectionString="Data Source=26.239.31.94; Initial Catalog=fazendinhago;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="Pdv" value="1" />
+    <add key="Pdv" value="2" />
     <!-- Nome da Estação no insert da venda_1 / 0 = Nome_da_Estação / 1 = Zimmer  -->
     <add key="EstacaoFicha" value="1" />
-    <add key="PdvId" value="1" />
+    <add key="PdvId" value="2" />
     <add key="PdvTef" value="001" />
     <add key="Loja" value="1" />
     <!-- Cartão Consumo (GiftCard) -->
     <add key="RestauranteId" value="65" />
     <!-- 0-SEM / 1-ECF / 2-SAT / 3-NFCe -->
-    <add key="EmissorFiscal" value="0" />
+    <add key="EmissorFiscal" value="3" />
     <!-- 0 = Sem frete / 1 = Com frete -->
     <add key="Frete" value="0" />
     <!-- 0 = PDV / 1 = Totem -->
@@ -28,7 +28,7 @@
     <add key="TotemHabPedido" value="1" />
     <add key="TotemHabFicha" value="1" />
     <add key="TotemHabPreco" value="1" />
-    <add key="CodigoLojaTef" value="1456" />
+    <add key="CodigoLojaTef" value="1615" />
     <add key="SOFTWAREHOUSECNPJ" value="32759021000181" />
     <add key="SOFTWAREHOUSECHAVEATICACAO" value="controlid1234" />
     <add key="CAIXA" value="2" />
