--- a/Toch/App.Config
+++ b/Toch/App.Config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=.; Initial Catalog=espetaculo;user id=sa;password=sql@asa;" providerName="System.Data.SqlClient"/>
+    <add name="MyContext" connectionString="Data Source=26.239.31.94; Initial Catalog=cascataportugal;user id=sa;password=sql@asa;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup>
   <runtime>
