--- a/src/Zip.Pdv.Form/App.config
+++ b/src/Zip.Pdv.Form/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <!-- Conexão com o banco de dados -->
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=26.239.31.94; Initial Catalog=fazendinhago;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
+    <add name="MyContext" connectionString="Data Source=26.239.31.94; Initial Catalog=expressarib;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -15,7 +15,7 @@
     <add key="PdvTef" value="001" />
     <add key="Loja" value="1" />
     <!-- Cartão Consumo (GiftCard) -->
-    <add key="RestauranteId" value="65" />
+    <add key="RestauranteId" value="66" />
     <!-- 0-SEM / 1-ECF / 2-SAT / 3-NFCe -->
     <add key="EmissorFiscal" value="3" />
     <!-- 0 = Sem frete / 1 = Com frete -->
