--- a/src/Zip.Pdv.Form/App.config
+++ b/src/Zip.Pdv.Form/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <!-- Conexão com o banco de dados -->
   <connectionStrings>
-    <add name="MyContext" connectionString="Data Source=26.239.31.94; Initial Catalog=expressarib;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
+    <add name="MyContext" connectionString="Data Source=26.65.61.104; Initial Catalog=Bares-Restaurante;user id=sa;password=alex3103;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
